Ghost rendering, texturing and, fixes